# property-prices

./: .gitignore  README.md  dvc.yaml  pyproject.toml
.dvc/: config
data/interim/bdline_gb/: .gitignore
data/processed/aggregated_price_paid_data/: .gitignore
data/processed/codepo_gb/: .gitignore
data/processed/price_paid_data/: .gitignore
data/raw/: .gitignore
data/raw/codepo_gb/: .gitignore
data/raw/price_paid_data/: .gitignore
specs/: format.json  map.vg.json
src/: __init__.py
src/data/: helpers.py  make_aggregated_price_paid_data.py  make_processed_codepo_gb.py  make_processed_price_paid_data.py  make_raw_bdline_gb.py  make_raw_codepo_gb.py  make_raw_price_paid_data.py
