[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Iain Dillingham <iain@dillingham.me.uk>"]

[tool.poetry.dependencies]
python = "~3.7"
dvc = {extras = ["s3"], version = "^1.11.8"}
pandas = "^1.1.3"
pyarrow = "^2.0.0"
ipython = "^7.18.1"
geopandas = "^0.8.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
flake8 = "^3.8.4"
mypy = "^0.790"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
